[package]
name = "postcard"
version = "0.1.0"
authors = ["leo60228 <iakornfeld@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
#default = ["console_error_panic_hook", "wee_alloc"]
default = []

[dependencies]
cfg-if = "0.1.2"
wasm-bindgen = "0.2"
png = "0.14.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }

[dependencies.image]
version = "0.21.0"
default-features = false
features = ["gif_codec", "jpeg", "ico", "png_codec", "tga", "tiff", "webp", "bmp", "pnm", "dxt"]

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
opt-level = 3
